--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "webpack-cli --mode=production",
     "postinstall": "webpack-cli --mode=production",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -21,5 +21,8 @@
   },
   "peerDependencies": {
     "react": "^16.2.0"
+  },
+  "dependencies": {
+    "react": "^18.2.0"
   }
 }
